--- a/gym/frontend/package.json
+++ b/gym/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -23,6 +24,10 @@
       "react-app/jest"
     ]
   },
+  "rules": {
+    "no-unused-vars": "off",
+    "react/jsx-no-undef": "off"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -34,9 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-react-app": "^7.0.1"
   }
 }
