--- a/gym/app/frontend/package.json
+++ b/gym/app/frontend/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0-alpha1",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-phone-number-input": "^3.3.9",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
