--- a/gym/app/frontend/package.json
+++ b/gym/app/frontend/package.json
@@ -12,6 +12,8 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.10.1",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
