--- a/gym/app/frontend/package.json
+++ b/gym/app/frontend/package.json
@@ -21,6 +21,7 @@
     "react-phone-number-input": "^3.3.9",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-select-search": "^4.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
